================
Next Version
================

===================
bst-external 0.10.0
===================

  o Add quilt source plugin for applying patch series.

==================
bst-external 0.9.0
==================

  o Add the ability to generate manifest files using the collect_manifest plugin.

==================
bst-external 0.8.0
==================

  o flatpak_image plugin now automatically moves all files in /etc into
    /files/etc
  o git_tag: Fixed tracking not picking up new changes if the ref is already
    set
  o Add flatpak_repo element plugin for creating a flatpak repository from
    flatpak_image elements.

==================
bst-external 0.7.1
==================

  o Fix git_tag plugin not updating tags if the source fetches from multiple
    repositories

==================
bst-external 0.7.0
==================

  o Add tar_element plugin for creating tarballs
  o Make git_tag plugin resilient to changes in buildstream's built-in git plugin.

==================
bst-external 0.6.2
==================

  o Add support for non-annotated tags in git_tag.
  o Make git_tag plugin fall back to normal behaviour if no tags are found.

==================
bst-external 0.6.1
==================

  o Add entrypoint for git_tag plugin

================
bst-external 0.6
================

  o New git-tag plugin: An extension to the BuildStream git plugin
    which allows automatic tracking of the latest tag in a branch.
  o fastboot_bootimg Element - Uses artifacts generated by buildstream to produce an
    image that can be flashed to the boot partition using fastboot.
  o fastboot_ext4 Element - Uses artifacts generated by buildstream to produce an
    ext4sparse image that can be flashed to userdata partitions or others using fastboot.

==================
bst-external 0.5.1
==================

  o collect-integration: Fix the collect-integration plugin not being loadable
    via pip

================
bst-external 0.5
================
