@@ -2,6 +2,9 @@
 Next Version
 ================
 
+o Allow pattern matching of tags and tracking multiple branches on git_tag
+    plugin
+
 ===================
 bst-external 0.10.0
 ===================
